# prog4_engine

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: emscripten.yml
Data/: highscores.csv  pepperguy.psd
Data/Characters/: HotDogGuy_AnimationData.json  PepperGuy_AnimationData.json
Data/Levels/: Level0.csv  Level0_Burgers.csv  Level1.csv  Level1_Burgers.csv  Level2.csv  Level2_Burgers.csv
Game/: BurgerTime.cpp  BurgerTime.h  BurgerTime.hpp  Game.cpp  Game.h  ImGui.cpp  ImGui.h  Main.cpp  TrashTheCache.cpp  TrashTheCache.h
Game/Components/: AIController.cpp  AIController.hpp  BurgerLayer.cpp  BurgerLayerComponent.cpp  BurgerLayerPart.cpp  BurgerLayerPart.hpp  Button.cpp  Button.hpp  ButtonComponent.cpp  ButtonComponent.hpp  EnemySpawner.cpp  EnemySpawner.hpp  Entity.cpp  Entity.hpp  FPSComponent.hpp  FPSDisplay.cpp  FPSDisplay.hpp  GameManager.cpp  GameManager.hpp  Health.cpp  Health.hpp  HealthComponent.cpp  HealthComponent.hpp  HighScoresDisplay.cpp  HighScoresDisplay.hpp  LayerPartComponent.cpp  LayerPartComponent.hpp  LevelGrid.cpp  LevelGrid.hpp  LevelGridComponent.cpp  LevelGridComponent.hpp  LivesDisplay.cpp  LivesDisplay.hpp  LivesDisplayComponent.cpp  LivesDisplayComponent.hpp  ObjectOrbitter.cpp  ObjectOrbitter.hpp  OrbitComponent.cpp  OrbitComponent.hpp  PepperDisplay.cpp  (+30 more)
Game/EntityControllers/: AIEnemyController.cpp  AIEnemyController.hpp  InputProvider.hpp  PlayerEnemyController.cpp  PlayerEnemyController.hpp  PlayerPepperController.cpp  PlayerPepperController.hpp
Game/Extras/: Achievements.cpp  Achievements.hpp  CustomCommands.cpp  CustomCommands.hpp  GameStructs.hpp  Observer.hpp  PlayerInputProvider.cpp  PlayerInputProvider.hpp  PlayerLivesObserver.cpp  PlayerLivesObserver.hpp  PlayerState.cpp  PlayerState.hpp  SDL_SoundSystem.cpp  SDL_SoundSystem.hpp  Subject.cpp  Subject.hpp
Game/PlayerStates/: PlayerState.cpp  PlayerState.hpp  PlayerStateClimbing.cpp  PlayerStateClimbing.hpp  PlayerStateIdle.cpp  PlayerStateIdle.hpp  PlayerStateWalking.cpp  PlayerStateWalking.hpp
Game/SceneLoaders/: GameOverSceneLoader.cpp  GameOverSceneLoader.hpp  GameSceneLoader.cpp  GameSceneLoader.hpp  LoadSceneLoader.cpp  LoadSceneLoader.hpp  MainSceneLoader.cpp  MainSceneLoader.hpp  SceneLoader.hpp
Game/States/: EntityState.cpp  EntityState.hpp  EntityStateAttacking.cpp  EntityStateAttacking.hpp  EntityStateClimbing.cpp  EntityStateClimbing.hpp  EntityStateDeath.cpp  EntityStateDeath.hpp  EntityStateIdle.cpp  EntityStateIdle.hpp  EntityStateStunned.cpp  EntityStateStunned.hpp  EntityStateWalking.cpp  EntityStateWalking.hpp
Game/States/PlayerStates/: PlayerState.cpp  PlayerState.hpp  PlayerStateClimbing.cpp  PlayerStateClimbing.hpp  PlayerStateIdle.cpp  PlayerStateIdle.hpp  PlayerStateWalking.cpp  PlayerStateWalking.hpp
GameComponents/: Achievements.cpp  Achievements.h  CustomCommands.h  Event.h  FPSComponent.cpp  FPSComponent.h  HealthComponent.cpp  HealthComponent.h  LivesDisplayComponent.cpp  LivesDisplayComponent.h  MoveComponent.cpp  MoveComponent.h  Observer.h  OrbitComponent.cpp  OrbitComponent.h  PlayerComponent.cpp  PlayerComponent.hpp  PlayerLivesObserver.cpp  PlayerLivesObserver.h  PlayerStateComponent.cpp  PlayerStateComponent.h  PlayerStateComponent.hpp  RenderComponent.cpp  RenderComponent.h  ScoreComponent.cpp  ScoreComponent.h  ScoreComponent.hpp  ScoreDisplayComponent.cpp  ScoreDisplayComponent.h  ScoreDisplayComponent.hpp  Subject.cpp  Subject.h  TextComponent.cpp  TextComponent.h  TextComponent.hpp  Texture2DComponent.cpp  Texture2DComponent.h  TrashTheCacheComponent.cpp  TrashTheCacheComponent.h
GameExtras/: Achievements.cpp  Achievements.h  Achievements.hpp  CustomCommands.cpp  CustomCommands.hpp  PlayerLivesObserver.cpp  PlayerLivesObserver.hpp  PlayerState.cpp  PlayerState.hpp  SDL_SoundSystem.cpp  SDL_SoundSystem.hpp  SoundEventQueue.cpp  SoundSystem.hpp  Subject.cpp
Minigin/: Binding.cpp  Binding.h  Binding.hpp  CSteamAchievements.cpp  CSteamAchievements.h  Command.cpp  Command.h  Command.hpp  Component.cpp  Component.h  Component.hpp  ControllerInput.cpp  ControllerInput.h  ControllerInput.hpp  FPSComponent.cpp  FPSComponent.h  Font.cpp  Game.cpp  Game.h  Game.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  InputInfo.h  InputInfo.hpp  InputManager.cpp  InputManager.h  KeyboardInput.cpp  KeyboardInput.h  KeyboardInput.hpp  Main.cpp  Minigin.cpp  Minigin.h  Minigin.hpp  ObjectRenderer.hpp  OrbitComponent.cpp  OrbitComponent.h  PlayerInput.h  PlayerInput.hpp  RenderComponent.cpp  (+36 more)
Minigin/Components/: Component.cpp  Component.hpp  ObjectRenderer.cpp  Texture2DDisplay.cpp  Transform.cpp  Transform.hpp
Minigin/EngineClasses/: Command.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Scene.cpp  Scene.hpp
Minigin/Inputs/: ControllerInput.cpp  ControllerInput.hpp  KeyboardInput.cpp  KeyboardInput.hpp
Minigin/Singletons/: InputManager.cpp  InputManager.hpp  TimeManager.cpp
Minigin/Sound/: SDL_SoundSystem.cpp  SDL_SoundSystem.hpp  SoundEventQueue.cpp
Minigin/Utils/: InputInfo.hpp  Renderer.cpp  SceneManager.cpp  SceneManager.hpp  ServiceProvider.hpp  TimeManager.hpp  sdbm_hash.hpp
